# Demo-Fork

./: .gitignore
python/: MIGRATION.md  MIGRATION_PLAN.md  README.md  README_CBSTM03A.md  STATEMENT_README.md  cbact04c_interest.py  cbstm03a_statement.py  cbstm03b_io.py  cbtrn02c_posting.py  interest_calc.py  interest_calculation.py  interest_calculator.py  post_transactions.py  pyproject.toml  requirements.txt  test_batch.py  test_cbact04c_interest.py  test_cbstm03a_statement.py  test_cbtrn02c_posting.py  test_dataaccess.py  test_interest_calc.py  test_models.py  test_post_transactions.py  test_transaction_validation.py  transaction_posting.py  transaction_validation.py
python/carddemo/: __init__.py  codec.py  etl.py  fixed_width.py  models.py  runner.py  validation.py
python/carddemo/batch/: __init__.py  intcalc.py  interest_calc.py  post_transactions.py  posttran.py  statement.py
python/data/: __init__.py  seed.py  store.py
python/fixtures/: acct.csv  cust.csv  trnx.csv  xref.csv
python/models/: __init__.py  account.py  card.py  card_xref.py  customer.py  daily_transaction.py  disclosure_group.py  tran_cat_balance.py  transaction.py  user_security.py
python/reference/: expected_statement.html  expected_statement.txt
python/tests/: conftest.py  test_data_store.py  test_etl.py  test_fixed_width.py  test_intcalc.py  test_interest_calculation.py  test_interest_calculator.py  test_models.py  test_parity.py  test_posttran.py  test_repository.py  test_runner.py  test_seed.py  test_statement.py  test_transaction_posting.py  test_validation.py
(+32 files in other folders)
